--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "@types/three": "^0.179.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -61,6 +62,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.179.1",
     "tsparticles": "^3.8.1",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
